Removed POST patches/:id/status endpoint
