# src/app/api/v1/patches/[patchId]/status/route.ts
@@ -1,11 +1,0 @@
-import {
-  PatchIdParamSchema,
-  getPatchStatus,
-} from "~/server/rest/controllers/patches.controller";
-import { createRestHandler, jsonResponse } from "~/server/rest/handler";
-
-export const GET = createRestHandler(async ({ params, context }) => {
-  const { patchId } = PatchIdParamSchema.parse(params);
-  const data = await getPatchStatus(context, patchId);
-  return jsonResponse(data);
-});
